  (Leo White, review by Gabriel Scherer and Florian Angeletti)

- #10361: Improve error messages for mismatched record and variant
  definitions.
  (Florian Angeletti, review by Gabriel Radanne and Gabriel Scherer)

- #10407: Produce more detailed error messages that contain full error traces
  when module inclusion fails.
  (Antal Spector-Zabusky, review by Florian Angeletti)

### Internal/compiler-libs changes:

- #1599: add unset directive to ocamltest to clear environment variables before
  running tests.
  (David Allsopp, review by Damien Doligez and Sébastien Hinderer)

- #10433: Remove the distinction between 32-bit aligned and 64-bit aligned
  64-bit floats in Cmm.memory_chunk.
  (Greta Yorsh, review by Xavier Leroy)

- #10434: Pun labelled arguments with type constraint in function applications.
  (Greta Yorsh, review by Nicolas Chataing and Nicolás Ojeda Bär)

- #10470: Remove unused `cstr_normal` field from the `constructor_description`
  type
  (Nicolas Chataing, review by Gabriel Scherer)

- #10472: refactor caml_sys_random_seed to ease future Multicore changes
  (Gabriel Scherer, review by Xavier Leroy)

- #10487: Move logic to get the type path from a constructor return type in
  Types
  (Nicolas Chataing, review by Jacques Garrigue)

- #10555: Do not use ghost locations for type constraints
  (Nicolás Ojeda Bär, report by Anton Bachin, review by Thomas Refis)

### Build system:

- #10471: Fix detection of arm32 architectures with musl in the configure
  script.
  (Louis Gesbert)

### Bug fixes:

- #10473: Add CFI directives to RISC-V runtime and asmcomp.
  This allows stacktraces to work in gdb through C and OCaml calls.
  (Edwin Török, review by Nicolás Ojeda Bär and Xavier Leroy)

- #10461, #10498: `caml_send*` helper functions take derived pointers
  as arguments.  Those must be declared with type Addr instead of Val.
  Moreover, poll point insertion must be disabled for `caml_send*`,
  otherwise the derived pointer is live across a poll point.