@@ -71,6 +71,10 @@ Working version
   when module inclusion fails.
   (Antal Spector-Zabusky, review by Florian Angeletti)
 
+- #10531: add naked_pointers to ocamlc -config exporting NAKED_POINTERS from
+  Makefile.config.
+  (Damien Doligez, review by Mark Shinwell and Gabriel Scherer)
+
 ### Internal/compiler-libs changes:
 
 - #1599: add unset directive to ocamltest to clear environment variables before
